--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "polka": "next",
     "quill": "^1.3.7",
     "rollup-plugin-css-only": "^2.1.0",
-    "sirv": "^1.0.0"
+    "sirv": "^1.0.0",
+    "svelte-persistent-store": "0.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
