--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "clipboard-polyfill": "^3.0.1",
     "compression": "^1.7.1",
     "polka": "next",
     "quill": "^1.3.7",
     "rollup-plugin-css-only": "^2.1.0",
     "sirv": "^1.0.0",
-    "svelte-persistent-store": "0.1.3"
+    "svelte-persistent-store": "0.1.3",
+    "turndown": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
