--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,7 +3,7 @@
 	"theme_color": "#333333",
 	"name": "First Draft",
 	"short_name": "First Draft",
-	"display": "minimal-ui",
+	"display": "fullscreen",
 	"start_url": "/",
 	"icons": [
 		{
